--- a/main.tex
+++ b/main.tex
@@ -18,13 +18,18 @@
 
 \newtheorem{theorem}{Theorem}
 \newtheorem{definition}{Definition}
+\newtheorem{proposition}{Proposition}
 \newtheorem{proof}{Proof}
 \newtheorem{lemma}{Lemma}
 \newtheorem{example}{Example}
 
+\newtheorem{problem}{Problem}
+
+
 \usepackage{amsmath}
 \usepackage{amsfonts} % Math fonts
 \usepackage{amssymb} % Math symbols
+\usepackage{dsfont}
 \usepackage{mathtools} % Math etc.
 \usepackage{slashed} % Dirac slash notation
 \usepackage{cancel} % Cancels to zero
@@ -76,11 +81,12 @@
 	Notes from the Princeton Theoretical Machine Learning Summer School
 \end{abstract}
 
-\part{Jianfeng Lu}
+\part{Jianfeng Lu: Neural Networks for PDEs}
 \input{JLu.tex}
 \newpage
 
-\part{Jianfeng Lu}
+\part{Yury Polyanskiy: Quantization}
+\input{polyanskiy.tex}
 \newpage
 
 \part{Jianfeng Lu}
