--- a/JLu.tex
+++ b/JLu.tex
@@ -100,7 +100,7 @@ Consider the set of functions $H^k(\Omega) = \{u : \int |\partial_{i_1} ... \par
 \begin{theorem}
 	[Bramble-Hilbert Lemma] Let $u$ be a function defined on the domain $\Omega$, and $v \in P_k(\Omega)$ ($k$'th order polynomials defined on domain $\Omega$). Under "mild" assumptions...
 	\begin{align}
-		\inf_{v \in P_k(\Omega)} \int_\Omega |u^{(i)} - v^{(j)}|^2 dx \leq C (\tex{diameter}(\Omega))^{m-k} \int_\omgea |u^{(m)}|^2 dx
+		\inf_{v \in P_k(\Omega)} \int_\Omega |u^{(i)} - v^{(j)}|^2 dx \leq C (\text{diameter}(\Omega))^{m-k} \int_\Omega |u^{(m)}|^2 dx
 	\end{align}
 	where $u^{(i)}$ is the $i$'th order derivative, $(m)$ is the highest finite order derivative.\\
 	\\
