--- a/main.tex
+++ b/main.tex
@@ -16,13 +16,14 @@
 \DeclareMathOperator{\Tr}{Tr}
 
 
+
 \newtheorem{theorem}{Theorem}
 \newtheorem{definition}{Definition}
 \newtheorem{proposition}{Proposition}
+\newtheorem{corollary}{Corollary}
 \newtheorem{proof}{Proof}
 \newtheorem{lemma}{Lemma}
 \newtheorem{example}{Example}
-
 \newtheorem{problem}{Problem}
 
 
@@ -37,7 +38,8 @@
 \usepackage{breqn}
 
 \newcommand{\expect}[1]{\mathbb{E}\left[#1\right]}
-
+\DeclarePairedDelimiter\ceil{\lceil}{\rceil}
+\DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
 % Visualization
 \usepackage{graphicx} % for including images
@@ -72,7 +74,7 @@
 %%% Title
 \title{Princeton Machine Learning Summer School}
 \author{Clark Miyamoto (cm6627@nyu.edu)}
-\date{Date}
+\date{August 12th - 21st}
 \begin{document}
 \maketitle
 
