--- a/main.tex
+++ b/main.tex
@@ -91,10 +91,12 @@
 \input{polyanskiy.tex}
 \newpage
 
-\part{Jianfeng Lu}
+\part{Yue M. Lu: How to Work with Non-Linear Random Matrices in ML}
+\input{YLu.tex}
 \newpage
 
-\part{Jianfeng Lu}
+\part{Theodore Misiakiewicz: 5 Flavors of Lower Bounds}
+\input{misiakiewicz.tex}
 \newpage
 
 \part{Jianfeng Lu}
